[gd_scene load_steps=4 format=2]

[ext_resource path="res://Asset/Altitude/Sky/Cloud/sprite/cloud_1.png" type="Texture" id=1]
[ext_resource path="res://Asset/Altitude/Sky/Cloud/sprite/cloud_2.png" type="Texture" id=2]
[ext_resource path="res://Asset/Altitude/Sky/Cloud/Cloud.gd" type="Script" id=3]

[node name="Cloud" type="Node2D"]
script = ExtResource( 3 )

[node name="Cloud2" type="Sprite" parent="."]
visible = false
position = Vector2( 98, -2 )
texture = ExtResource( 2 )

[node name="Cloud1" type="Sprite" parent="."]
position = Vector2( 128, 0 )
texture = ExtResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="timeout" from="DeathTimer" to="." method="_on_Timer_timeout"]
